kube_deploy/Dev/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dcs-app-dev
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: dcs-app-dev
    spec:
      serviceAccountName: irsadcs
      containers:
        - name: data-capture-service
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/cica/cica-repo-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3100
  selector:
    matchLabels:
      app: dcs-app-dev
