kube_deploy/Dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dcs-service-dev
  labels:
    app: dcs-app-dev
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3100
  selector:
    app: dcs-app-dev
