kube_deploy/Dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 31.121.104.9/32,37.143.143.162/32,37.143.143.10/32
    external-dns.alpha.kubernetes.io/set-identifier: dcs-ingress-dev-claim-criminal-injuries-compensation-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: '100'
  name: dcs-ingress-dev
  namespace: claim-criminal-injuries-compensation-dev
spec:
  tls:
    - hosts:
        - data-capture-service.dev.claim-criminal-injuries-compensation.apps.live.cloud-platform.service.justice.gov.uk
    - hosts:
        - data-capture-service.dev.claim-criminal-injuries-compensation.service.justice.gov.uk
      secretName: data-capture-service-cert-secret-dev
  ingressClassName: default
  rules:
    - host: data-capture-service.dev.claim-criminal-injuries-compensation.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              service:
                name: dcs-service-dev
                port:
                  number: 80
            pathType: ImplementationSpecific
    - host: data-capture-service.dev.claim-criminal-injuries-compensation.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              service:
                name: dcs-service-dev
                port:
                  number: 80
            pathType: ImplementationSpecific
